# Isomorph-Core

./: README.md  pyproject.toml
doc/: Main principe.md  isomorph_bootstrap_blueprint.md
src/isomorph_core/: __init__.py
src/isomorph_core/actions/: __init__.py  context.py  contracts.py  registry.py  result.py
src/isomorph_core/compiler/: __init__.py  planner.py  validator.py
src/isomorph_core/definitions/: __init__.py  edge.py  node.py  policies.py  ports.py  workflow.py
src/isomorph_core/events/: __init__.py  domain_bus.py  models.py  runtime_bus.py
src/isomorph_core/operators/: __init__.py  action.py  base.py  branch.py  context.py  foreach.py  join.py  registry.py
src/isomorph_core/persistence/: __init__.py  interfaces.py  memory.py
src/isomorph_core/plugins/: __init__.py  loader.py
src/isomorph_core/policies/: __init__.py  retry.py  timeout.py
src/isomorph_core/runtime/: __init__.py  engine.py  node_state.py  result.py  state.py  token.py
src/isomorph_core/telemetry/: __init__.py  logging.py  metrics.py
tests/: test_planner.py  test_runtime_foreach.py  test_runtime_join.py  test_runtime_retry.py  test_runtime_simple_dag.py  test_runtime_timout.py  test_validator.py
